website/web/static/tree.css
#tree_svg {
  position: relative;
}

.node circle {
  fill: #fff;
  stroke: steelblue;
  stroke-width: 3px;
}

.node text {
  font: 12px sans-serif;
}

.flashed-messages {
  position: fixed;
  bottom: 5px;
  text-align: center;
  width: 50%;
  transform: translate(50%);
}

.blur {
  filter: blur(10px);
}

#screenshot_thumbnail {
  scroll-margin: 50px;
}

#help {
  text-align: center;
  border-style: solid;
  border-color: #0d6efd;
  border-radius: 25px;
  text-decoration: none;
  height: 50px;
  width: 50px;
  background-color: #0d6efd;
  color: white;
  align-content: center;
}

#help:hover {
  background-color: white;
  color: blue;
}

/* Generic parts of menus */
hr {
  display: block;
  margin-top: 0.1em;
  margin-bottom: 0.5em;
  margin-left: auto;
  margin-right: auto;
  border-color: black;
  border-style: inset;
  border-width: 1px;
}

#menu-tree-top {
  display: flex;
  flex-direction: row;
  position: fixed;
  width: 0;
}

/* menu vertical */
#tree_logo {
  width: 205px;
}

#menu_container_vertical {
  position: sticky;
  top: 5px;
  left: 5px;
  padding: 5px;
  width: fit-content;
}

#menu_vertical {
  position: sticky;
  top: 5px;
  left: 5px;
  background: white;
  border: 2px solid;
  padding: 5px;
}

#menu_container_vertical .menu-header {
  width: 200px;
  height: 110px;
  resize: both;
}

#menu_container_vertical ul.components {
    padding: 10px 0;
}

#menu_container_vertical ul li a {
    padding: 5px;
    font-size: 1.1em;
    display: block;
    text-align: center;;
}

/* menu horizontal */

#menu_container_horizontal {
  position: sticky;
  top: 5px;
  left: 217px;
  padding: 5px;
  width: 80%;
}

#menu_horizontal {
  position: sticky;
  top: 5px;
  background: white;
  border: 2px solid;
  padding: 5px;
  width: fit-content;
}

.hstack{
  height: 106.6px;
}


/* Dropdown Menus */
.dropbtn {
  background-color: #0d6efd;
  color: white;
  font-size: 16px;
  border: none;
  width: 180px;
  text-align: center;
  height: 50px;
}

.dropbtn:hover, .dropbtn:focus {
  background-color: #0067fc;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  width: 180px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {
  background-color: #f1f1f1;
}

/* Show the dropdown menus on hover */
#capture-menu:hover #capture-menu-content {
  display: block;
}
#actions-menu:hover #actions-menu-content {
  display: block;
}
#tools-menu:hover #tools-menu-content {
  display: block;
}
#admin-menu:hover #admin-menu-content {
  display: block;
}
#extra-menu:hover #extra-menu-content {
  display: block;
}

/* legend */
#legend_container {
  position: fixed;
  bottom: 5px;
  right: 5px;
  padding: 5px;
}

#legend {
  position: fixed;
  top: 55vw;
  right: 5px;
  background: white;
  border: 2px solid;
  padding: 5px;
}

#legend_show {
  position: fixed;
  top: 85vw;
  right: 10px;
  width: 70px;
}

/* Fast categories*/
.fast-categories {
  border: 2px solid;
  margin: 5px;
  padding: 5px;
}

.fast-categories fieldset {
  border: 1px solid;
  padding: 5px;
}

